--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,5 +1,5 @@
 <section id="banner" class="py-5 d-none d-sm-block">
  <div>
-	 <img  src="../assets/banner.png" width=100%>
+	 <img  src="https://jackiepease.github.io/assets/banner.png" width=100%>
  </div>
 </section>
