--- a/css/custom/includes/_post.scss
+++ b/css/custom/includes/_post.scss
@@ -4,6 +4,10 @@
     padding-top: 10px;
   }
   img {
+    height: 100%;
+    max-height: 600px;
+    width: 100%;
+    max-width: 600px;
     display: block;
     margin-left: auto;
     margin-right: auto;
