More amends for biobox post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,11 @@
     </div>
     <div class="row">
       <div class="col">
+	Subscribe <a href="/feed.xml">via RSS</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
         All content copyright Jackie Pease &copy; {{ site.time | date: '%Y' }}.
       </div>
     </div>
