--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   <title>Jackie Pease</title>
     
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="alternate" type="application/rss+xml" title="Jackie Pease" href="https://jackiepease.zone/feed.xml" />
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 <style>
