--- a/css/custom/includes/_post.scss
+++ b/css/custom/includes/_post.scss
@@ -4,9 +4,7 @@
     padding-top: 10px;
   }
   img {
-    height: 100%;
-    max-height: 600px;
-    width: 100%;
+    height: auto;
     max-width: 600px;
     display: block;
     margin-left: auto;
