--- a/css/custom/includes/_post.scss
+++ b/css/custom/includes/_post.scss
@@ -15,6 +15,10 @@
     margin-top: 20px;
     margin-bottom: 40px;
   }
+  .twitter-tweet {
+    margin-left: auto;
+    margin-right: auto;
+  }
   /******************************
    * STYLES FOR DISPLAYING CODE
    ******************************/
